hphp/hack/test/typecheck/early_solve_inter.php.exp
File "early_solve_inter.php", line 10, characters 9-18:
Was expecting an object but type is unknown (Typing[4297])
  File "early_solve_inter.php", line 4, characters 8-13:
  It is unknown because type parameter `Tv` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "collections/Map.hhi", line 444, characters 36-37:
    via this generic `Tv`
